# TODO uncomment and update when adding the "add_test" directives
# if(NOT DEFINED ENV{DYAD_TEST_MACHINE})
#     message(FATAL_ERROR "-- [dyad] DYAD_TEST_MACHINE in env should be set for ${PROJECT_NAME} test build")
# else()
#     message(STATUS "[dyad] found setting machine to $ENV{DYAD_TEST_MACHINE}")
# endif()
# if (NOT DEFINED ENV{DSPACES_MAX_VERSIONS})
#     message(FATAL_ERROR "-- [dyad] DSPACES_MAX_VERSIONS in env should be set for ${PROJECT_NAME} paper test build")
# else ()
#     message(STATUS "[dyad] found setting DataSpaces max versions to $ENV{DSPACES_MAX_VERSIONS}")
# endif ()

find_package(Catch2 REQUIRED)
find_package(MPI REQUIRED COMPONENTS CXX)
find_package(dspaces REQUIRED CONFIG)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(Catch2::Catch2)
include_directories(${MPI_CXX_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_BINARY_DIR}/include)
set(TEST_LIBS Catch2::Catch2 ${MPI_CXX_LIBRARIES} -rdynamic dspaces::dspaces)
set(TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/catch_config.h ${CMAKE_CURRENT_SOURCE_DIR}/test_utils.h)
add_executable(unit_test unit_test.cpp ${TEST_SRC} )
target_link_libraries(unit_test ${TEST_LIBS})

# TODO add the "add_test" directives by going into the subdirectories
# add_subdirectory(script)
# add_subdirectory(data_plane)
# add_subdirectory(mdm)
