find_package(Catch2 REQUIRED)
find_package(MPI COMPONENTS CXX C REQUIRED)
if (MPI_FOUND)
    message(STATUS "[DYAD] found mpi.h at ${MPI_CXX_INCLUDE_DIRS}")
    include_directories(${MPI_CXX_INCLUDE_DIRS})
    set(DEPENDENCY_LIB ${DEPENDENCY_LIB} ${MPI_CXX_LIBRARIES})
endif ()
set(TEST_LIBS Catch2::Catch2 -lstdc++fs ${MPI_CXX_LIBRARIES} ${CPP_LOGGER_LIBRARIES} )
set(TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/catch_config.h ${CMAKE_CURRENT_SOURCE_DIR}/test_utils.h)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(ucx)